--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-lg-4 text-lg-end">
             <a href="/admin/" class="btn btn-dark rounded-pill px-4">
-                <i class="bi bi-gear-fill me-2"></i>Django Admin
+                <i class="bi bi-gear-fill me-2"></i>Sellux Plaster Admin
             </a>
         </div>
     </div>
