--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -21,15 +21,18 @@
     </div>
 </section>
 
-<!-- Trust Signals Section -->
-<section class="py-4 bg-white">
+<!-- Quick Actions Section -->
+<section class="py-4">
     <div class="container">
-        <div class="row justify-content-center text-center">
-            <h6 class="text-muted mb-3">Trusted by Ghana's Leading Brands</h6>
-            <div class="col-lg-10">
-                <div class="d-flex flex-wrap justify-content-center align-items-center">
-                    <!-- Partner logos can be added here -->
-                </div>
+        <div class="row g-3 text-center">
+            <div class="col-lg-4">
+                <a href="{% url 'catalogue:product_list' %}" class="btn btn-outline-dark w-100 p-4 rounded-4 fs-5 fw-bold">Shop Materials</a>
+            </div>
+            <div class="col-lg-4">
+                <a href="{% url 'portfolio:project_list' %}" class="btn btn-outline-dark w-100 p-4 rounded-4 fs-5 fw-bold">View Portfolio</a>
+            </div>
+            <div class="col-lg-4">
+                <a href="{% url 'estimation:estimator' %}" class="btn btn-outline-dark w-100 p-4 rounded-4 fs-5 fw-bold">Get an Estimate</a>
             </div>
         </div>
     </div>
